fixed app bar title cut off

--- a/src/app-bar/styles.scss
+++ b/src/app-bar/styles.scss
@@ -26,6 +26,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  height: 32px;
 }
 
 // Rules for "TRANSPARENT" context
